sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:12: error: value ==- is not a member of Int
    if (nain==-1) {
            ^