sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var nain=0
  var lgr=getNombreValeurs
  do {
    if (plusPetit(nain+1,nain)) {
      echange(nain,nain+1)
      nain-=1
    } else {
      nain+=1
    }
    if (nain==-1) {
      nain=1
    }
  } while (nain+1<lgr)
}